--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="./food.html">Home</a></li>
+        <li><a href="./home.html">Home</a></li>
         <li><a href="#" class="active">About</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
@@ -65,3 +65,4 @@
 
 </body>
 </html>
+
