Fix home link and update contact page structure
Updated the contact page to correct the home link and ensure proper HTML structure.

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="./food.html">Home</a></li>
+        <li><a href="./home.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="#" class="active">Contact</a></li>
       </ul>
@@ -66,3 +66,4 @@
 
 </body>
 </html>
+
