--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yum Me Recipes</title>
-  <link rel="stylesheet" href="./food.css">
+  <link rel="stylesheet" href="./home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -73,3 +73,4 @@
 
 </body>
 </html>
+
